2001-03-15  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* README, README.ja: Update procedure of package installation.

	* w3m.el (w3m-hook): Removed.
	(w3m-goto-mailto-url): Old name is `w3m-mailto-url'.
	(w3m-goto-ftp-url): Old name is `w3m-exec-ftp'.
	(w3m-convert-ftp-url-for-emacsen): Old name is
	`w3m-convert-ftp-to-emacsen'.
	(w3m-exec): Removed code for ftp protocol.
	(w3m-alive-p): Change spec of return value when w3m is alive.
	(w3m-goto-url): Made this function safe when it is called at the
	buffer whose major mode is not equal to w3m-mode.
	(w3m): If it is interactively called when w3m is alive, it is
	simply select the appropriate buffer in the current window without
	asking url.
	(w3m-view-parent-page, w3m-browse-url, w3m-view-source,
	w3m-history): Use `w3m-goto-url' instead of `w3m'.
	(w3m-mode-map): Replace `w3m' with `w3m-goto-url'.

2001-03-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (MULE): Make `locate-library' run quietly; bind
	defcustom'ed variables at compile-time; require `w3m' after
	byte-optimizations are done.

	* w3m.el (w3m-static-cond): New macro; use it for defining
	`find-coding-system'.
	(w3m-url-encode-string): Use `append' instead of `string-to-list'
	to coerce a string to a list of chars.
	(w3m-entity-regexp): Don't funcall `regexp-opt' directly for
	avoiding compile warning.

2001-03-15  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m.el (w3m-exec-process): Add `delete-process' to clean up
	resources of child process.

2001-03-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* Makefile.in (default): Report errors if it has occurred while
	examining modules.

	* w3m.el: Add autoload for `w3m-remove-image' when compiling.
	(w3m-charset-coding-system-alist): Use `coding-system-p' if the
	function `find-coding-system' is not bound.

	* w3mhack.el: Use `require' instead of `load' for loading "w3m" to
	avoid undesirable newlines in stdout.

2001-03-15  Katsumi Yamaoka  <yamaoka@jpl.org>
